--- a/teammatcherapp/templates/view_profile.html
+++ b/teammatcherapp/templates/view_profile.html
@@ -54,6 +54,7 @@
             <p>                                   </p>
             <p> Name: {{user.name}}</p>
             <p> Age: {{user.age}}</p>
+            <p> Phone: {{user.phone}}</p>
             <p> City: {{user.city}}</p>
             <p> Sport: {{user.sport}}</p>
             <p> Experience: {{user.experience}}</p> 
